Fixed tap-outline on mobile

--- a/src/components/Counter.scss
+++ b/src/components/Counter.scss
@@ -10,6 +10,10 @@
   user-select: none;
 }
 
+#counter:active {
+  -webkit-tap-highlight-color: transparent;
+}
+
 #buttons {
   width: 100%;
   max-width: 600px;
